objects/UPC_Order_Confirmation_Email_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to store the data related to Order confirmation emails</description>
    <fields>
        <fullName>UPC_Document_Folder_Name__c</fullName>
        <label>Document Folder Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_EmailTemplate_Name__c</fullName>
        <label>Order Confirmation EmailTemplate Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Email_Language__c</fullName>
        <label>Email Language</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Opportunity_EmailTemplate__c</fullName>
        <label>Opportunity EmailTemplate</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TopNet_EmailTemplateName__c</fullName>
        <label>TopNet EmailTemplateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UPC Order Confirmation Email Setting</label>
</CustomObject>